--- a/css/maquillaje.css
+++ b/css/maquillaje.css
@@ -1,29 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;300;400;500;600;700&family=Montserrat:wght@100;200;300;400;700&display=swap');
-/*Divider*/
+
+/****DIVIDER****/
 .contenedor-envio {
     display: flex;
     justify-content: center;
 }
 
-.header-envio{
-    background-color: black;
+.header-envio {
+    background-color: #BF2A2A;
     color: white;
     font-family: 'League Spartan', sans-serif;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     text-align: center;
     height: 100%;
     width: 100%;
 }
 
-/*Header*/
-.logo-img{
+/****HEADER****/
+.logo-img {
     display: flex;
     justify-content: center;
     width: 20%;
 }
 
-#brand{
+#brand {
     width: 60%;
 }
 
@@ -46,7 +47,8 @@
 #barra {
     border: black 1px solid;
 }
-/*div iconos*/
+
+/****DIV ICONOS****/
 .iconos {
     display: flex;
     flex-direction: row;
@@ -65,19 +67,26 @@
     width: 28%;
 }
 
-.cont-icon{
+.cont-icon {
     display: flex;
     justify-content: center;
 }
-/*Nav*/
+
+/****NAV****/
+#cont-fluid {
+    justify-content: end;
+    background-color: #ffffff;
+}
+
 .navbar-expand-lg .navbar-collapse {
     display: flex;
     flex-direction: column-reverse;
     align-content: center;
+    color: #BF2A2A;
 }
 
 .nav-item {
-    padding-right: 50px;
+    padding-right: 80px;
     font-family: 'League Spartan', sans-serif;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
@@ -92,7 +101,7 @@
     border: black 1px solid;
 }
 
-#btn-outline-success{
+#btn-outline-success {
     border: #BF2A2A 1px solid;
     --bs-btn-color: rgba(0, 0, 0, 0.644);
     --bs-btn-border-color: rgba(0, 0, 0, 0.644);
@@ -110,18 +119,19 @@
     --bs-btn-disabled-border-color: #BF2A2A;
     --bs-gradient: none;
 }
-/*Division de pagina*/
-.cortes{
+
+/****CORTES****/
+.cortes {
     text-align: center;
     font-family: 'League Spartan', sans-serif;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
-    font-size: 25px;
-    margin-top: 50px;
+    font-weight: 500;
+    font-size: 2em;
+    margin-top: 40px;
     margin-bottom: 35px;
 }
 
-.lineas{
+.lineas {
     border-top: 1px solid rgba(92, 90, 90, 0.493);
     height: 2px;
     width: 100%;
@@ -129,22 +139,22 @@
     margin: 10px auto 0 auto;
 }
 
-main{
+main {
     display: flex;
     flex-direction: row;
 }
 
-/*SIDE MENU*/
+/****SIDE MENU****/
 .menu-vertical {
     padding-top: 30px;
     width: 15%;
 }
 
-.side-bar ul{
+.side-bar ul {
     list-style: none;
 }
 
-.side-bar ul a{
+.side-bar ul a {
     box-sizing: border-box;
     font-family: 'League Spartan', sans-serif;
     font-family: 'Montserrat', sans-serif;
@@ -156,21 +166,21 @@ main{
 }
 
 
-.side-bar ul ul{
+.side-bar ul ul {
     height: 0px;
     overflow: hidden;
 }
 
-.side-bar ul li:hover ul{
+.side-bar ul li:hover ul {
     height: auto;
     overflow: hidden;
 }
 
-.submenu{
+.submenu {
     padding: 0;
 }
 
-/*Grid cards generales productos*/
+/****GRID CARDS PRODUCTOS****/
 
 .contenedor-grid {
     display: flex;
@@ -180,7 +190,7 @@ main{
     width: 80%;
 }
 
-.grid{
+.grid {
     display: grid;
     row-gap: 40px;
 }
@@ -196,14 +206,15 @@ main{
 }
 
 
-.card{
+.card {
     width: 90%;
     height: 500px;
     border-radius: 2%;
     background-color: white;
-    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.56);
--webkit-box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.56);
--moz-box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.56);;
+    box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.56);
+    -webkit-box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.56);
+    -moz-box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.56);
+    ;
 }
 
 .image-content {
@@ -259,37 +270,41 @@ main{
     justify-content: center;
 }
 
-#labial-nyx{
-    width: 57%;
-}
-
-#serum-ordinary, #aceite-ordinary, #hidratante-ordinary {
-    width: 50%;
-    padding-bottom: 15px;
-    padding-top: 15px;
-}
-
-#eye-khiels, #garnier-agua, #acf-protector, #serum-ordinary-2, #corrector-eucerin {
-    width: 55%;
-}
-
-#limpiador-khiels{
+#mac-iluminador,
+#mac-mascara,
+#mac-labial,
+#mac-mascara-2,
+#mac-polvo {
     width: 50%;
 }
 
-hr{
+#mac-labial-2,
+#mac-corrector {
+    width: 54%;
+}
+
+#mac-rubor {
+    width: 54%;
+}
+
+#mascara-maybelline {
+    width: 58%;
+}
+
+hr {
     border: none;
 }
-/*Box card producto*/
-.card{
+
+/****BOX CARD PRODUCTO****/
+.card {
     width: 90%;
     height: 500px;
     border-radius: 2%;
     background-color: white;
-    box-shadow: 0px 0px 17px 7px rgba(0,0,0,0.26);
-    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.56);
-    -webkit-box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.56);
-    -moz-box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.56);
+    box-shadow: 0px 0px 17px 7px rgba(0, 0, 0, 0.26);
+    box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.56);
+    -webkit-box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.56);
+    -moz-box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.56);
 
 }
 
@@ -302,11 +317,12 @@ hr{
 
 }
 
-.card-content{
+.card-content {
     width: 100%;
 }
 
-.nombre-marca, .precio {
+.nombre-marca,
+.precio {
     color: black;
     font-family: 'League Spartan', sans-serif;
     font-family: 'Montserrat', sans-serif;
@@ -321,6 +337,7 @@ hr{
     font-weight: 700;
     font-size: 18px;
 }
+
 .nombre-producto {
     color: black;
     font-family: 'League Spartan', sans-serif;
@@ -333,6 +350,7 @@ hr{
 .separador {
     border: none;
 }
+
 .card-img {
     position: relative;
     background: #fff;
@@ -342,18 +360,18 @@ hr{
 .card-image .card-img {
     height: 220px;
     width: 250px;
-    object-fit:cover;
+    object-fit: cover;
 
 }
 
-.foto-producto{
+.foto-producto {
     padding-top: 25px;
-    object-fit:contain;
+    object-fit: contain;
     width: 200px;
     height: 200px;
 }
 
-/*Navigation*/
+/****NAVIGATION****/
 .contenedor-navigation {
     display: flex;
     justify-content: center;
@@ -364,12 +382,12 @@ hr{
     padding-top: 20px;
 }
 
-.page-item{
+.page-item {
     border: 1px solid rgba(0, 0, 0, 0.288);
     border-radius: 5%;
 }
 
-/*footer*/
+/****FOOTER****/
 .caja-footer {
     display: flex;
     justify-content: center;
@@ -394,11 +412,13 @@ hr{
     width: 31%;
 }
 
-.nosotros, .links, .contacto {
+.nosotros,
+.links,
+.contacto {
     padding-right: 40px;
 }
 
-.contacto{
+.contacto {
     width: 31%;
 }
 
