--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;300;400;500;600;700&family=Montserrat:wght@100;200;300;400;700&display=swap');
 
-/*Divider*/
+/****DIVIDER****/
 .contenedor-envio {
     display: flex;
     justify-content: center;
@@ -17,7 +17,7 @@
     width: 100%;
 }
 
-/*Header*/
+/****HEADER****/
 .logo-img {
     display: flex;
     justify-content: center;
@@ -48,7 +48,7 @@
     border: black 1px solid;
 }
 
-/*div iconos*/
+/****DIV ICONOS****/
 .iconos {
     display: flex;
     flex-direction: row;
@@ -72,7 +72,7 @@
     justify-content: center;
 }
 
-/*Nav*/
+/****NAV****/
 #cont-fluid {
     background-color: #ffffff;
     justify-content: end;
@@ -120,7 +120,7 @@
     --bs-gradient: none;
 }
 
-/*Grid informacion*/
+/****GRID INFORMACION****/
 .contenedor-info {
     background-color: #03658C;
 }
@@ -147,7 +147,7 @@
     grid-template-rows: 1fr;
 }
 
-/* Empieza GRID II*/
+/****EMPIEZA GRID II****/
 .contenedor-grid {
     display: flex;
     justify-content: center;
@@ -255,7 +255,7 @@ hr {
     border: none;
 }
 
-/*Termina GRID II*/
+/****CORTES****/
 
 .cortes {
     text-align: center;
@@ -274,12 +274,12 @@ hr {
     padding-bottom: 20px;
 }
 
-/*parte fotos info*/
+/****PARTE FOTOS INFO****/
 .img-info {
     width: 100%;
 }
 
-/*caja suscripcion*/
+/****CAJA SUSCRIPCION****/
 .caja-suscripcion {
     display: flex;
     justify-content: center;
@@ -353,7 +353,7 @@ hr {
     --bs-btn-disabled-border-color: #D996A7;
 }
 
-/*footer*/
+/****FOOTER****/
 .caja-footer {
     display: flex;
     justify-content: center;
@@ -425,6 +425,8 @@ hr {
     text-align: left;
     list-style: none;
 }
+
+/****QUERIES***/
 
 @media (width < 992px) {
     .row {
@@ -659,6 +661,12 @@ hr {
 
     .texto-suscripcion h2 {
         font-size: 1em;
+    }
+
+    .metodos,
+    .envio,
+    .cuotas {
+        width: 90%;
     }
 }
 
