tercera pre entrega. Se agrego SASS, meta, vars y mixin

--- a/css/cuidado-facial.css
+++ b/css/cuidado-facial.css
@@ -182,7 +182,7 @@ main {
 
 /****GRID CARDS PRODUCTOS****/
 
-.contenedor-grid {
+.cont-grid {
     display: flex;
     justify-content: center;
     align-items: center;
